--- a/css/styles.css
+++ b/css/styles.css
@@ -269,6 +269,7 @@ img {
   line-height: 1.16;
   letter-spacing: 0.01em;
   color: var(--main-title-color);
+  text-align: left;
 }
 .modal-icon{
   position: absolute;
@@ -309,7 +310,7 @@ img {
   width: 16px;
   height: 15px;
   cursor: pointer;
-  border: 2px solid var(--primary-text-color);
+  border: 2px solid var(--second-title-color);
   margin-right: 7px;
 
 }
