--- a/css/styles.css
+++ b/css/styles.css
@@ -324,6 +324,9 @@ img {
   line-height: 1.7;
   color: var(--main-title-color);
   margin-bottom: 30px;
+  margin-top: 20px;
+  margin-left: 52px;
+  text-align: center;
 }
 .modal-checkbox:checked + .modal-checkbox-label::before{
   padding: 3px;
@@ -365,6 +368,12 @@ img {
   box-shadow: 0px 4px 4px rgb(0 0 0 / 15%);
   background-color: #188CE8;
 }
+.modal-privat{
+  margin-left: 40px;
+  margin-right: 40px;
+  text-align: left;
+}
+
 
 /* /* --------------ABOUT---------------- 
  */
