--- a/css/styles.css
+++ b/css/styles.css
@@ -286,6 +286,9 @@ img {
 .modal-input:focus + .modal-icon{
   fill: var(--accent-color);
 }
+.modal-button-x:focus .modal-close-x{
+  fill: var(--accent-color);
+}
 
 .modal-massage{
   width: 100%;
