--- a/css/styles.css
+++ b/css/styles.css
@@ -207,6 +207,8 @@ img {
   left: 0;
   width: 100%;
   height: 100%;
+  z-index: 99;
+  
   background-color: rgba(0, 0, 0, 0.2);
   transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -367,6 +369,12 @@ img {
   line-height: 1.87;
   padding: 15px 55px;
   cursor: pointer;
+  /* position: absolute;
+    top: 8px;
+    right: 8px; */
+    /* width: 30px; */
+    /* height: 30px; */
+    /* border-radius: 50%; */
 
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
   box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
