--- a/css/styles.css
+++ b/css/styles.css
@@ -105,6 +105,7 @@ img {
 }
 .main-nav-link {
   display: inline-block;
+  position: relative;
   font-weight: 500;
   letter-spacing: 0.02em;
   color: var(--second-title-color);
@@ -208,7 +209,6 @@ img {
   width: 100%;
   height: 100%;
   z-index: 99;
-  
   background-color: rgba(0, 0, 0, 0.2);
   transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -216,6 +216,7 @@ img {
   opacity: 0;
   pointer-events: none;
 }
+
 .modal-button-x {
   border: 1px solid rgba(0, 0, 0, 0.1);
   border-radius: 50%;
@@ -227,6 +228,9 @@ img {
   justify-content: center;
   margin-left: auto;
   background-color: unset;
+  position: absolute;
+  top: 8px;
+  right: 8px;
 }
 .modal {
   position: absolute;
@@ -235,25 +239,25 @@ img {
   transform: translate(-50%, -50%);
   min-height: 581px;
   min-width: 528px;
-  padding: 8px;
+  padding: 40px;
   background-color: var(--text-hero);
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
 }
-.modal-form{
+.modal-form {
   display: flex;
   flex-direction: column;
 }
-.modal-form-title{
+.modal-form-title {
   font-weight: bold;
-  color:  var(--second-title-color);
+  color: var(--second-title-color);
   font-size: 20px;
   line-height: 1.15;
   text-align: center;
   margin-bottom: 12px;
 }
-.modal-input{
+.modal-input {
   width: 100%;
   height: 40px;
   padding-left: 42px;
@@ -261,43 +265,45 @@ img {
   border-radius: 4px;
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.modal-input:focus{
+.modal-input:focus,
+.modal-input:hover {
   outline: none;
   border-color: var(--accent-color);
 }
 
-
-
-.modal-label{
+.modal-label {
   margin-bottom: 10px;
   font-size: 12px;
   line-height: 1.16;
   letter-spacing: 0.01em;
   color: var(--main-title-color);
   text-align: left;
+  display: block;
 }
-.modal-icon{
+.modal-icon {
   position: absolute;
   top: 50%;
   left: 12px;
-  transform:translateY(-50%);
+  transform: translateY(-50%);
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.modal-form-wrapper{
+.modal-form-wrapper {
   display: block;
   position: relative;
   margin-top: 4px;
 }
-.modal-input:focus + .modal-icon{
+.modal-input:focus + .modal-icon,
+.modal-input:hover + .modal-icon {
   fill: var(--accent-color);
 }
+
 .modal-button-x:focus .modal-close-x,
-.modal-button-x:hover .modal-close-x{
+.modal-button-x:hover .modal-close-x {
   fill: var(--accent-color);
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.modal-massage{
+.modal-massage {
   width: 100%;
   height: 120px;
   margin-top: 4px;
@@ -307,38 +313,36 @@ img {
   resize: none;
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.modal-massage::placeholder{
+.modal-massage::placeholder {
   color: rgba(117, 117, 117, 0.5);
 }
-.modal-massage:focus{
+.modal-massage:focus,
+.modal-massage:hover {
   outline: none;
   border-color: var(--accent-color);
 }
-.modal-checkbox-label::before{
+.modal-checkbox-label::before {
   display: block;
-  content: "";
+  content: '';
   width: 16px;
   height: 15px;
   cursor: pointer;
   border: 2px solid var(--second-title-color);
   margin-right: 7px;
-
 }
-.modal-accept-policy{
+.modal-accept-policy {
   color: var(--accent-color);
 }
-.modal-checkbox-label{
+.modal-checkbox-label {
   display: flex;
   align-items: center;
   font-size: 14px;
   line-height: 1.7;
   color: var(--main-title-color);
   margin-bottom: 30px;
-  margin-top: 20px;
-  margin-left: 52px;
   text-align: center;
 }
-.modal-checkbox:checked + .modal-checkbox-label::before{
+.modal-checkbox:checked + .modal-checkbox-label::before {
   padding: 3px;
   background-image: url(../images/vector.svg);
   background-color: var(--accent-color);
@@ -347,10 +351,11 @@ img {
   border: none;
   background-position: center;
 }
-.modal-checkbox:focus + .modal-checkbox-label::before{
+.modal-checkbox:focus + .modal-checkbox-label::before,
+.modal-checkbox:hover + .modal-checkbox-label::before {
   border-color: var(--accent-color);
 }
-.modal-button{
+.modal-button {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -362,40 +367,28 @@ img {
   border-radius: 4px;
   border: none;
   align-self: center;
-
   font-family: inherit;
   font-weight: 700;
   font-size: 16px;
   line-height: 1.87;
   padding: 15px 55px;
   cursor: pointer;
-  /* position: absolute;
-    top: 8px;
-    right: 8px; */
-    /* width: 30px; */
-    /* height: 30px; */
-    /* border-radius: 50%; */
-
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-  box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .modal-button:hover,
 .modal-button:focus {
   box-shadow: 0px 4px 4px rgb(0 0 0 / 15%);
-  background-color: #188CE8;
+  background-color: #188ce8;
 }
 .modal-button:hover,
 .modal-button:focus {
-  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1), 
-  background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-
+  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.modal-privat{
-  margin-left: 40px;
-  margin-right: 40px;
+.modal-privat {
   text-align: left;
 }
-
 
 /* /* --------------ABOUT---------------- 
  */
@@ -643,6 +636,9 @@ img {
   display: flex;
   align-items: baseline;
 }
+.footer-item {
+  margin-bottom: 9px;
+}
 
 .footer-social {
   margin-left: 70px;
@@ -741,15 +737,15 @@ img {
 .logo {
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.form-footer-container{
-  margin-left: 93px;
+.form-footer-container {
+  margin-left: auto;
 }
-.form-footer{
+.form-footer {
   display: flex;
   justify-content: center;
   align-items: center;
 }
-.form-footer-text{
+.form-footer-text {
   font-weight: 700;
   font-size: 14px;
   line-height: 1.14;
@@ -757,7 +753,7 @@ img {
   color: var(--text-hero);
   margin-bottom: 20px;
 }
-.form-footer-email{
+.form-footer-email {
   width: 358px;
   height: 50px;
   background-color: transparent;
@@ -768,14 +764,14 @@ img {
   padding-left: 16px;
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.form-footer-email::placeholder{
+.form-footer-email::placeholder {
   color: rgba(255, 255, 255, 0.6);
 }
-.form-footer-email:focus{
+.form-footer-email:focus {
   outline: none;
   border-color: var(--accent-color);
 }
-.form-footer-button{
+.form-footer-button {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -796,14 +792,14 @@ img {
   line-height: 1.87;
   letter-spacing: 0.06em;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-  box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .form-footer-button:focus,
-.form-footer-button:hover{
+.form-footer-button:hover {
   box-shadow: 0px 4px 4px rgb(0 0 0 / 15%);
-  background-color: #188CE8;
+  background-color: #188ce8;
 }
-.form-footer-icon{
+.form-footer-icon {
   margin-left: 10px;
   fill: var(--text-hero);
 }
@@ -923,9 +919,9 @@ img {
   position: absolute;
   width: 48px;
   height: 4px;
-  top: 76px;
   background: var(--accent-color);
   border-radius: 2px;
+  bottom: -1px;
 }
 .current-portfolio::after {
   content: '';
@@ -933,9 +929,9 @@ img {
   position: absolute;
   width: 78px;
   height: 4px;
-  top: 76px;
   background: var(--accent-color);
   border-radius: 2px;
+  bottom: -1px;
 }
 
 .overlay {
