--- a/css/styles.css
+++ b/css/styles.css
@@ -341,6 +341,7 @@ img {
   color: var(--main-title-color);
   margin-bottom: 30px;
   text-align: center;
+  justify-content: center;
 }
 .modal-checkbox:checked + .modal-checkbox-label::before {
   padding: 3px;
